@@ -15,6 +15,7 @@ FORM.proof-list {
 	I.fa-solid {
 		width: 1.2em;
 		text-align: center;
+		margin-right: 2px;
 	}
 }
 		
